added firebase pods, testing firebase

--- a/foodHub/Podfile
+++ b/foodHub/Podfile
@@ -7,7 +7,12 @@ target 'foodHub' do
 
   # Pods for foodHub
   # add the Firebase pod for Google Analytics
+  pod 'Firebase'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
+  pod 'Firebase/Core'
   pod 'Firebase/Analytics'
+  pod 'Firebase/Firestore'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
